Bug 84153 - EDITING: "Insert Comment" should be "Edit Comment" in context menu when a cell already has a comment
Summary: EDITING: "Insert Comment" should be "Edit Comment" in context menu when a cel...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: low minor
Assignee: Ravindra Vidhate
URL:
Whiteboard: target:5.0.0
Keywords: needsDevEval
Depends on:
Blocks:
 
Reported: 2014-09-22 00:04 UTC by pb
Modified: 2020-03-09 16:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pb 2014-09-22 00:04:19 UTC
Problem description: 

Steps to reproduce:
1. create a comment to a cell
2. right click that cell
3. observe context menu does not offer option to edit the comment

Current behavior:
as above

Expected behavior:

provided "edit comment" item in context menu

I note that:

1.  The version of ms excel that I use does provide this item in the context menu, and I am therefore accustomed to having it there.

2.  The current procedure to edit a comment, which is not going to be obvious to a naive user, apparently is as follows:

  a.  right click cell
  b.  select 'show comment' from context menu.  
      (Naive user:   "What, the comment was already showing"
      -- so this is a poor choice of wording.)
  c.  left click on comment to make it editable.  
      (Not obvious you need to do this to a naive user.)
  d.  do whatever editing is required.
  e.  left click on affected cell
  f.  select "hide comment."  
      (Naive user:  "What, I don't want to hide the comment,
      I want it to show when I hover over the cell" -- again
      poor choice of wording.)

Wow, what a pain in the butt!

Now, let's compare to the equivalent process in my excel version:

  a.  right click cell
  b.  select "edit comment" from context menu.
  c.  edit the comment.
  d.  left click affected cell or anything else to return
      to hover-shows-comment mode.

Note that fixing this could maybe share code with bug 83948.
Also note that I am using Version: 4.2.6.3, an option which was not offered in the pulldown for this bug report.

-30-
              
Operating System: Windows 7
Version: 4.2.6.2 release
Comment 1 Adolfo Jayme Barrientos 2014-09-22 04:32:56 UTC
Thank you for your bug report.
Comment 2 Yousuf Philips (jay) (retired) 2014-10-29 20:14:44 UTC
Was just about to submit this same bug. :D

Basically the label should be 'Edit Comment' rather than 'Insert Comment' when a cell has an already existing comment.
Comment 3 pb 2014-10-29 20:54:26 UTC
Aha.  Thanks.  I did not notice that "insert comment" actually means "edit comment" in this context.

So, in case anyone is listening, this requires a check whether there is or isn't an existing comment, then providing the appropriate verbiage in the context menu.
Comment 4 pb 2014-10-29 20:57:53 UTC
For that matter, a less elegant but easier [temporary] fix is to just change the wording in the context menu to "Insert or Edit Comment."
Comment 5 Yousuf Philips (jay) (retired) 2014-10-29 20:59:47 UTC
I think the quick fix might be just to change it to 'Edit Comment' because you are editing it if it exists or not. :D
Comment 6 Commit Notification 2015-05-12 10:13:29 UTC
Ravindra_Vidhate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d2ef03ce0b9295034f9078bc04acbf4cfc939ef6

tdf#84153: "Edit Comment" in context menu when a cell has a comment

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Robinson Tryon (qubit) 2015-12-18 10:36:03 UTC
Migrating Whiteboard tags to Keywords: (needsDevEval)
[NinjaEdit]