tdf#84153: "Edit Comment" in context menu when a cell has a comment

Problem Description :
1. When a cell doesn't has comment, the contextual menu shows menu
item "Insert Comment".

2. Also when the cell has the comment, the contextual menu shows
following menu items
"Insert Comment"
"Delete Comment"
"Show Comment"

In the second case mentioned above, the contextual menu should show
the menu item "Edit Comment" instead of "Insert Comment"

XML difference: None
After RT : None

Solution :
In this patch, a new menu item "Edit Comment" have been added. So at the
time of the display it checks whether cell has comment associated with it.
If comments are present for cell, it will display "Edit Comment" in the
contextual menu otherwise "Insert Comment" will be displayed.

TODO: Writing a UT seems to be tricky for this change.
Need to analyze and will raise the UT in separate CL.

Change-Id: Ie0499d02157c4fd18894c5f203c363f64659f3b3