include/svx/svxcommands.h
@@ -82,6 +82,7 @@
 #define CMD_SID_GRID_USE                            ".uno:GridUse"
 #define CMD_SID_GRID_VISIBLE                        ".uno:GridVisible"
 #define CMD_SID_INSERT_POSTIT                       ".uno:InsertAnnotation"
+ #define CMD_SID_EDIT_POSTIT                        ".uno:InsertAnnotation"
 #define CMD_SID_REPLYTO_POSTIT                      ".uno:ReplyToAnnotation"
 #define CMD_SID_RULER                               ".uno:ShowRuler"
 #define CMD_SID_DELETE_POSTIT                       ".uno:DeleteAnnotation"
