sc/source/ui/view/cellsh1.cxx
@@ -2155,6 +2155,7 @@ void ScCellShell::ExecuteEdit( SfxRequest& rReq )
             break;
 
         case SID_INSERT_POSTIT:
+        case SID_EDIT_POSTIT:
             if ( pReqArgs )
             {
                 const SvxPostItAuthorItem&  rAuthorItem = static_cast<const SvxPostItAuthorItem&>(pReqArgs->Get( SID_ATTR_POSTIT_AUTHOR ));
